--- a/src/ripple.scss
+++ b/src/ripple.scss
@@ -6,3 +6,11 @@
 	transform: translate(-50%, -50%);
 	z-index: 999;
 }
+
+
+// fix
+
+.m-plylist-mix .itm .td:last-of-type {
+    float: right;
+    width: 14%;
+}
